# TakiMatrix

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
TakiMatrix/: CMakeLists.txt  TakiMatrix.cpp  TakiMatrix.h
TakiMatrix/Tests/UnitTests/: CMakeLists.txt  SimpleTest.cpp  SimpleTest.hpp
TakiMatrix/includes/: jetbrains_parser.h  test.h
TakiMatrix/includes/backend/: arithmetic.hpp
TakiMatrix/includes/cpu_emulator/execution_units/kernels/: kernal_caller.h  kernels.h
TakiMatrix/includes/cpu_emulator/execution_units/units/: essential_unit.hpp  execution_unit.hpp
TakiMatrix/includes/cpu_emulator/front_end/: fetch.hpp  instruction_cache.hpp  instruction_queue.hpp  reservation_table.hpp
TakiMatrix/includes/cpu_emulator/processor_util/: instruction_set.hpp  matrix_object.hpp
TakiMatrix/includes/cpu_emulator/system_agent/: compute_unit.hpp  process.hpp  system_agent.hpp  utility.hpp
TakiMatrix/includes/cpu_emulator/util/: instruction_set.hpp
TakiMatrix/includes/kernel/: kernel.h  kernelCaller.h
TakiMatrix/includes/util/: matrix.hpp
TakiMatrix/sources/: CMakeLists.txt  test.cpp  test.cu
TakiMatrix/sources/backend/: arithmetic.cpp
TakiMatrix/sources/cpu_emulator/execution_units/kernels/: kernal_caller.cu  kernels.cu
TakiMatrix/sources/cpu_emulator/execution_units/units/: essential_unit.cpp  execution_unit.cpp
TakiMatrix/sources/cpu_emulator/front_end/: fetch.cpp  instruction_cache.cpp  instruction_queue.cpp  reservation_table.cpp
TakiMatrix/sources/cpu_emulator/processor_util/: instruction_set.cpp  matrix_object.cpp
TakiMatrix/sources/cpu_emulator/system_agent/: compute_unit.cpp  process.cpp  system_agent.cpp  utility.cpp
TakiMatrix/sources/cpu_emulator/util/: instruction_set.cpp
TakiMatrix/sources/kernel/: kernel.cu  kernelCaller.cu
TakiMatrix/sources/util/: matrix.cpp
